--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,1 +1,28 @@
-
+name: Daily Update
+on:
+  schedule:
+    - cron: '05 08 * * 1-5'
+  workflow_dispatch:
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Install Libs
+        run: pip install yfinance pandas numpy
+      - name: Run Engine
+        run: python update_dashboard.py
+      - name: Commit and Push
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add index.html
+          git commit -m "Auto Update" || echo "No changes"
+          git push
