--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -14,18 +14,18 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.10' # <--- Modificato da 3.9 a 3.10 per risolvere l'errore
 
       - name: Install dependencies
         run: pip install yfinance pandas
 
       - name: Run Engine
-        run: python quant_pro_engine.py  # <-- Assicurati che questo nome sia corretto
+        run: python quant_pro_engine.py
 
       - name: Commit and Push
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
           git add index.html
-          git commit -m "Update Dashboard V7.6.6" || exit 0
+          git commit -m "Update Dashboard" || exit 0
           git push
