--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,8 +32,9 @@ jobs:
           git commit -m "Update Dashboard $(date)" || echo "No changes"
           git push
 
-      - name: ✈️ Invia Notifica Telegram
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: python bot.py
+     # - name: ✈️ Invia Notifica Telegram
+     #   env:
+      #    TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+    
+      #      TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+     #   run: python bot.py
